--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "es2015",
     "stage-0",
-    "stage-2"
+    "stage-2",
+    "stage-3"
   ],
   "plugins": ["transform-runtime"],
   "comments": false
