updated dep links

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "mocha-lcov-reporter": "git://github.com/commerceblock/mocha-lcov-reporter.git#a6d38a2db85fc40f8a1b534aedee62d34858cbaa",
     "solidity-coverage": "git://github.com/commerceblock/solidity-coverage.git#dcee2f61e35b42acde9b52d152c2f591c899cf34",
     "truffle": "git://github.com/commerceblock/truffle.git#cddc0107d052d8dcdd310476a96e913dfdc2642c",
-    "web3": "^0.20.2",
-    "truffle-contract" : "^3.0.0" ,
-    "web3-eth-accounts": "^1.0.0-beta.23",    
+    "web3": "git://github.com:commerceblock/web3.js.git#e6af9b08e8c797a166ae12987f2589112666b135",
+    "truffle-contract" : "git://github.com:commerceblock/truffle-contract.git#c7fbdb3d39a5fbc5be450e2d444ad40172df44d1",
     "web3-provider-engine": "git://github.com/commerceblock/provider-engine#7ea8b7c946e504af2b145b702b50caef557818dc"
   }
 }
